Ampliado /estacion para dar detalles de trenes que pasan por alli.

--- a/packages/desktop/src/components/Estacion/styles.css
+++ b/packages/desktop/src/components/Estacion/styles.css
@@ -2,3 +2,11 @@
   height: 400px;
   margin: 0 auto;
 }
+.tab-content {
+  border: solid #ddd 1px;
+  border-top: none;
+  padding: 1em;
+}
+th span {
+  width: 16px;
+}
